# libzzip

./: CMakeLists.txt  Findzziplib.cmake  dist.info  libzziplib.def
include/zzip/: _config.h
